examples/invalid/012_unknown_operator.jd
justification base {
    conclusion c is "A conclusion"
    strategy   s is "A strategy"
    evidence   e is "An evidence"
    s supports c
    e supports s
}

justification bad is unknown(base)
